# TRION-Protocol

./: Cargo.toml  GENESIS_RECORD.md  README.md
api/: Cargo.toml
api/src/: main.rs
contracts/: ITRIONConsumer.sol  TRIONManipulationRegistry.sol  TRIONSignalRegistry.sol  TRIONSilenceRegistry.sol
docker/: Dockerfile.api  Dockerfile.indexer  Dockerfile.manipulation-detector  Dockerfile.relayer  Dockerfile.signal-engine  Dockerfile.signal-publisher  docker-compose.yml
docs/: consumer-examples.md  integration-guide.md  overview.md  signal-spec.md
indexer/: Cargo.toml
indexer/src/: main.rs
manipulation-detector/: Cargo.toml
manipulation-detector/src/: main.rs
relayer/: Cargo.toml
relayer/src/: main.rs
signal-engine/: Cargo.toml
signal-engine/src/: main.rs
signal-publisher/: Cargo.toml
signal-publisher/src/: main.rs
trion/: Cargo.toml
trion/src/: lib.rs
validator/: ValidatorStaking.vy
