[workspace]
members = [
  "trion",
  "indexer",
  "signal-engine",
  "manipulation-detector",
  "signal-publisher",
  "api",
  "relayer"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "CC0-1.0"

[workspace.dependencies]
anyhow = "1"
async-nats = "0.35"
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "=4.5.23", features = ["derive", "env"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
