[package]
name = "indexer"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
trion = { path = "../trion" }
