[package]
name = "relayer"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
trion = { path = "../trion" }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
ethers = { version = "2.0", default-features = false, features = ["abigen", "rustls"] }
